# kubeauto-ai-day

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  README.md  REMAINING-ITEMS.md  overnight-build.sh  pyproject.toml
.claude/: README.md  settings.json
.github/: pull_request_template.md
backstage/: README.md
collateral/: README.md  attendee-handout.md  blog-post-draft.md  demo-runbook.md  kubeauto-ai-day-presentation-v12.pptx  slide-outline.md  social-media-thread.md
docs/: ARCHITECTURE.md  COST.md  EIGHT-GUARDRAILS-RECONCILIATION.md  EIGHT-GUARDRAILS.md  LESSONS-LEARNED.md  README.md  REMEDIATION-PLAN.md  SECURITY.md  SETUP.md  TEARDOWN.md  VERSION-MAP.md  WALKTHROUGH.md
gitops/: README.md
infrastructure/: README.md
observability/: README.md
policies/: README.md
prompts/: README.md  phase-01-prompts.md  phase-02-prompts.md  phase-03-prompts.md  phase-04-prompts.md  phase-05-prompts.md  phase-06-prompts.md  phase-07-prompts.md
recordings/: README.md  phase-00-summary.md  phase-01-summary.md
sample-app/: .dockerignore  Dockerfile  README.md  catalog-info.yaml
scorecard/: SCORECARD-TEMPLATE.md  methodology.md  raw-scores.json
scripts/: README.md  live-demo.sh  rebuild.sh  teardown.sh  update-backstage-token.sh
security/: README.md
slides/: kubeauto-ai-day-presentation-v17-clean-notes.pptx
spec/: BUILD-SPEC.md  ROADMAP.md  SCORECARD.md
tests/: conftest.py  test_phase_01_foundation.py  test_phase_02_gitops.py  test_phase_03_security.py  test_phase_04_observability.py  (+4 more)
(+144 files in other folders)
