[project]
name = "kubeauto-ai-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "boto3>=1.42.49",
    "kubernetes>=35.0.0",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "requests>=2.32.5",
]
