[project]
name = "kubeauto-ai-day"
version = "0.1.0"
description = "Production-grade Internal Developer Platform on EKS — reference IDP for KubeAuto Day Europe 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
timeout = 120

[dependency-groups]
dev = [
    "boto3>=1.42.49",
    "kubernetes>=35.0.0",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "qrcode>=8.2",
    "requests>=2.32.5",
]
